--- a/Proyectos/Proyecto2/borrador_modelo.ipynb
+++ b/Proyectos/Proyecto2/borrador_modelo.ipynb
@@ -238,9 +238,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/25 19:29:37 WARNING mlflow.pyfunc: Detected one or more mismatches between the model's dependencies and the current Python environment:\n",
+      " - psutil (current: 6.1.1, required: psutil==5.9.5)\n",
+      " - scipy (current: 1.15.1, required: scipy==1.13.1)\n",
+      "To fix the mismatches, call `mlflow.pyfunc.get_model_dependencies(model_uri)` to fetch the model's environment and install dependencies using the resulting environment file.\n",
+      "2025/03/25 19:29:37 WARNING mlflow.pyfunc: The version of Python that the model was saved in, `Python 3.9.16`, differs from the version of Python that is currently running, `Python 3.11.9`, and may be incompatible\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "code() argument 13 must be str, not int",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 28\u001b[0m\n\u001b[0;32m     25\u001b[0m model_production_uri \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmodels:/\u001b[39m\u001b[38;5;132;01m{model_name}\u001b[39;00m\u001b[38;5;124m/production\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(model_name\u001b[38;5;241m=\u001b[39mmodel_name)\n\u001b[0;32m     27\u001b[0m \u001b[38;5;66;03m# Load model as a PyFuncModel.\u001b[39;00m\n\u001b[1;32m---> 28\u001b[0m loaded_model \u001b[38;5;241m=\u001b[39m \u001b[43mmlflow\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpyfunc\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel_uri\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmodel_production_uri\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     30\u001b[0m \u001b[38;5;66;03m# Prediccion del modelo\u001b[39;00m\n\u001b[0;32m     31\u001b[0m predict \u001b[38;5;241m=\u001b[39m loaded_model\u001b[38;5;241m.\u001b[39mpredict(data)\n",
+      "File \u001b[1;32mc:\\Users\\jssaa\\OneDrive\\Documentos\\sebastian saavedra\\Maestria\\Semestre 2025 01\\MLops\\Grupo6\\venv\\Lib\\site-packages\\mlflow\\pyfunc\\__init__.py:596\u001b[0m, in \u001b[0;36mload_model\u001b[1;34m(model_uri, suppress_warnings, dst_path)\u001b[0m\n\u001b[0;32m    594\u001b[0m _add_code_from_conf_to_system_path(local_path, conf, code_key\u001b[38;5;241m=\u001b[39mCODE)\n\u001b[0;32m    595\u001b[0m data_path \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(local_path, conf[DATA]) \u001b[38;5;28;01mif\u001b[39;00m (DATA \u001b[38;5;129;01min\u001b[39;00m conf) \u001b[38;5;28;01melse\u001b[39;00m local_path\n\u001b[1;32m--> 596\u001b[0m model_impl \u001b[38;5;241m=\u001b[39m \u001b[43mimportlib\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mimport_module\u001b[49m\u001b[43m(\u001b[49m\u001b[43mconf\u001b[49m\u001b[43m[\u001b[49m\u001b[43mMAIN\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_load_pyfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata_path\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    597\u001b[0m predict_fn \u001b[38;5;241m=\u001b[39m conf\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpredict_fn\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpredict\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    598\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m PyFuncModel(model_meta\u001b[38;5;241m=\u001b[39mmodel_meta, model_impl\u001b[38;5;241m=\u001b[39mmodel_impl, predict_fn\u001b[38;5;241m=\u001b[39mpredict_fn)\n",
+      "File \u001b[1;32mc:\\Users\\jssaa\\OneDrive\\Documentos\\sebastian saavedra\\Maestria\\Semestre 2025 01\\MLops\\Grupo6\\venv\\Lib\\site-packages\\mlflow\\sklearn\\__init__.py:509\u001b[0m, in \u001b[0;36m_load_pyfunc\u001b[1;34m(path)\u001b[0m\n\u001b[0;32m    504\u001b[0m     pyfunc_flavor_conf \u001b[38;5;241m=\u001b[39m _get_flavor_configuration(\n\u001b[0;32m    505\u001b[0m         model_path\u001b[38;5;241m=\u001b[39mpath, flavor_name\u001b[38;5;241m=\u001b[39mpyfunc\u001b[38;5;241m.\u001b[39mFLAVOR_NAME\n\u001b[0;32m    506\u001b[0m     )\n\u001b[0;32m    507\u001b[0m     path \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(path, pyfunc_flavor_conf[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmodel_path\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n\u001b[1;32m--> 509\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_load_model_from_local_file\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpath\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mpath\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mserialization_format\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mserialization_format\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Users\\jssaa\\OneDrive\\Documentos\\sebastian saavedra\\Maestria\\Semestre 2025 01\\MLops\\Grupo6\\venv\\Lib\\site-packages\\mlflow\\sklearn\\__init__.py:467\u001b[0m, in \u001b[0;36m_load_model_from_local_file\u001b[1;34m(path, serialization_format)\u001b[0m\n\u001b[0;32m    464\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m serialization_format \u001b[38;5;241m==\u001b[39m SERIALIZATION_FORMAT_CLOUDPICKLE:\n\u001b[0;32m    465\u001b[0m     \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mcloudpickle\u001b[39;00m\n\u001b[1;32m--> 467\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mcloudpickle\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[43mf\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mTypeError\u001b[0m: code() argument 13 must be str, not int"
+     ]
+    }
+   ],
    "source": [
     "# Tratamiento de información\n",
     "data = pd.DataFrame([{\n",
@@ -265,7 +291,7 @@
     "\n",
     "mlflow.set_tracking_uri(\"http://localhost:5000\")\n",
     "\n",
-    "model_name = \"modelo_covertype\"\n",
+    "model_name = \"modelo_covertype_vf\"\n",
     "model_production_uri = \"models:/{model_name}/production\".format(model_name=model_name)\n",
     "\n",
     "# Load model as a PyFuncModel.\n",
