Update fastapi, streamlit, prometheus

--- a/Proyectos/Proyecto3/jupyter/pruebas.ipynb
+++ b/Proyectos/Proyecto3/jupyter/pruebas.ipynb
@@ -3672,6 +3672,22 @@
       "Created version '1' of model 'modelo_penguins_v2'.\n",
       "2025/04/26 16:28:41 INFO mlflow.sklearn.utils: Logging the 27 best runs, no runs will be omitted.\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[CV] END classifier__max_depth=5, classifier__min_samples_split=2, classifier__n_estimators=10; total time=   0.0s\n",
+      "[CV] END classifier__max_depth=5, classifier__min_samples_split=2, classifier__n_estimators=50; total time=   0.1s\n",
+      "[CV] END classifier__max_depth=5, classifier__min_samples_split=2, classifier__n_estimators=50; total time=   0.1s\n",
+      "[CV] END classifier__max_depth=5, classifier__min_samples_split=2, classifier__n_estimators=10; total time=   0.1s\n",
+      "[CV] END classifier__max_depth=5, classifier__min_samples_split=2, classifier__n_estimators=10; total time=   0.0s\n",
+      "[CV] END classifier__max_depth=5, classifier__min_samples_split=2, classifier__n_estimators=50; total time=   0.1s\n",
+      "[CV] END classifier__max_depth=5, classifier__min_samples_split=2, classifier__n_estimators=50; total time=   0.1s\n",
+      "[CV] END classifier__max_depth=5, classifier__min_samples_split=2, classifier__n_estimators=10; total time=   0.1s\n",
+      "[CV] END classifier__max_depth=5, classifier__min_samples_split=2, classifier__n_estimators=10; total time=   0.1s\n",
+      "[CV] END classifier__max_depth=5, classifier__min_samples_split=2, classifier__n_estimators=50; total time=   0.1s\n"
+     ]
     }
    ],
    "source": [
@@ -3695,6 +3711,129 @@
     "\n",
     "with mlflow.start_run(run_name=\"autolog_pipe_model_reg\") as run:\n",
     "    grid_search.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16da6ce0-2a79-4266-98b1-e27b9629a894",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "769c6698-b9d0-4706-b360-7cdf93032348",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tabla 'penguins' creada exitosamente.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import mysql.connector\n",
+    "from mysql.connector import Error\n",
+    "\n",
+    "# Configura los datos de conexión a tu servicio MySQL\n",
+    "config = {\n",
+    "    'host': 'mysql-data-store',   \n",
+    "    'user': 'admin',        \n",
+    "    'password': 'supersecret', \n",
+    "    'database': 'datadb'\n",
+    "}\n",
+    "\n",
+    "try:\n",
+    "    connection = mysql.connector.connect(**config)\n",
+    "\n",
+    "    if connection.is_connected():\n",
+    "        cursor = connection.cursor()\n",
+    "        \n",
+    "        create_table_query = \"\"\"\n",
+    "        CREATE TABLE IF NOT EXISTS resultados (\n",
+    "            id INT AUTO_INCREMENT PRIMARY KEY,\n",
+    "            island VARCHAR(255),\n",
+    "            culmen_length_mm FLOAT,\n",
+    "            culmen_depth_mm FLOAT,\n",
+    "            flipper_length_mm FLOAT,\n",
+    "            body_mass_g FLOAT,\n",
+    "            sex VARCHAR(50),\n",
+    "            model VARCHAR(50),\n",
+    "            created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP\n",
+    "        );\n",
+    "        \"\"\"\n",
+    "\n",
+    "        cursor.execute(create_table_query)\n",
+    "        connection.commit()\n",
+    "        print(\"Tabla 'penguins' creada exitosamente.\")\n",
+    "\n",
+    "except Error as e:\n",
+    "    print(f\"Error al conectar o crear la tabla: {e}\")\n",
+    "\n",
+    "finally:\n",
+    "    if connection.is_connected():\n",
+    "        cursor.close()\n",
+    "        connection.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "f31fe65e-658f-409a-a129-54c1d6302f04",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tabla 'Resultados' creada exitosamente en PostgreSQL.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import psycopg2\n",
+    "\n",
+    "try:\n",
+    "    # Conexión a la base de datos PostgreSQL\n",
+    "    connection = psycopg2.connect(\n",
+    "        host='postgres-data-store',   # El nombre de tu servicio en docker-compose\n",
+    "        database='datadb',            # La base de datos que configuraste\n",
+    "        user='admin',                 # El usuario configurado\n",
+    "        password='supersecret'        # La contraseña\n",
+    "    )\n",
+    "\n",
+    "    cursor = connection.cursor()\n",
+    "\n",
+    "    # Script para crear la tabla\n",
+    "    create_table_query = \"\"\"\n",
+    "    CREATE TABLE IF NOT EXISTS resultados_modelo (\n",
+    "        id SERIAL PRIMARY KEY,\n",
+    "        island VARCHAR(255),\n",
+    "        culmen_length_mm FLOAT,\n",
+    "        culmen_depth_mm FLOAT,\n",
+    "        flipper_length_mm FLOAT,\n",
+    "        body_mass_g FLOAT,\n",
+    "        sex VARCHAR(50),\n",
+    "        model VARCHAR(50),\n",
+    "        created_at TIMESTAMP WITH TIME ZONE DEFAULT CURRENT_TIMESTAMP\n",
+    "    );\n",
+    "    \"\"\"\n",
+    "\n",
+    "    cursor.execute(create_table_query)\n",
+    "    connection.commit()\n",
+    "    print(\"Tabla 'Resultados' creada exitosamente en PostgreSQL.\")\n",
+    "\n",
+    "except Exception as e:\n",
+    "    print(f\"Error al conectar o crear la tabla: {e}\")\n",
+    "\n",
+    "finally:\n",
+    "    if connection:\n",
+    "        cursor.close()\n",
+    "        connection.close()\n"
    ]
   }
  ],
