Update: union docker-compose

--- a/Proyectos/Proyecto3/jupyter/pruebas.ipynb
+++ b/Proyectos/Proyecto3/jupyter/pruebas.ipynb
@@ -3628,8 +3628,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025/04/26 16:28:30 INFO mlflow.tracking.fluent: Experiment with name 'mlflow_penguins_vf5' does not exist. Creating a new experiment.\n",
-      "2025/04/26 16:28:31 WARNING mlflow.utils.git_utils: Failed to import Git (the Git executable is probably not on your PATH), so Git SHA is not available. Error: Failed to initialize: Bad git executable.\n",
+      "2025/05/03 04:09:31 INFO mlflow.tracking.fluent: Experiment with name 'mlflow_penguins_vf' does not exist. Creating a new experiment.\n",
+      "2025/05/03 04:09:32 WARNING mlflow.utils.git_utils: Failed to import Git (the Git executable is probably not on your PATH), so Git SHA is not available. Error: Failed to initialize: Bad git executable.\n",
       "The git executable must be specified in one of the following ways:\n",
       "    - be included in your $PATH\n",
       "    - be set via $GIT_PYTHON_GIT_EXECUTABLE\n",
@@ -3646,7 +3646,7 @@
       "Example:\n",
       "    export GIT_PYTHON_REFRESH=quiet\n",
       "\n",
-      "2025/04/26 16:28:31 WARNING mlflow.utils: Truncated the value of the key `estimator`. Truncated value: `Pipeline(steps=[('preprocessor',\n",
+      "2025/05/03 04:09:32 WARNING mlflow.utils: Truncated the value of the key `estimator`. Truncated value: `Pipeline(steps=[('preprocessor',\n",
       "                 ColumnTransformer(transformers=[('text',\n",
       "                                                  OneHotEncoder(handle_unknown='ignore'),\n",
       "                                                  ['island', 'sex']),\n",
@@ -3667,25 +3667,25 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Successfully registered model 'modelo_penguins_v2'.\n",
-      "2025/04/26 16:28:39 INFO mlflow.tracking._model_registry.client: Waiting up to 300 seconds for model version to finish creation. Model name: modelo_penguins_v2, version 1\n",
-      "Created version '1' of model 'modelo_penguins_v2'.\n",
-      "2025/04/26 16:28:41 INFO mlflow.sklearn.utils: Logging the 27 best runs, no runs will be omitted.\n"
+      "Successfully registered model 'modelo_penguins'.\n",
+      "2025/05/03 04:09:50 INFO mlflow.tracking._model_registry.client: Waiting up to 300 seconds for model version to finish creation. Model name: modelo_penguins, version 1\n",
+      "Created version '1' of model 'modelo_penguins'.\n",
+      "2025/05/03 04:09:52 INFO mlflow.sklearn.utils: Logging the 27 best runs, no runs will be omitted.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[CV] END classifier__max_depth=5, classifier__min_samples_split=2, classifier__n_estimators=10; total time=   0.0s\n",
-      "[CV] END classifier__max_depth=5, classifier__min_samples_split=2, classifier__n_estimators=50; total time=   0.1s\n",
-      "[CV] END classifier__max_depth=5, classifier__min_samples_split=2, classifier__n_estimators=50; total time=   0.1s\n",
-      "[CV] END classifier__max_depth=5, classifier__min_samples_split=2, classifier__n_estimators=10; total time=   0.1s\n",
-      "[CV] END classifier__max_depth=5, classifier__min_samples_split=2, classifier__n_estimators=10; total time=   0.0s\n",
-      "[CV] END classifier__max_depth=5, classifier__min_samples_split=2, classifier__n_estimators=50; total time=   0.1s\n",
-      "[CV] END classifier__max_depth=5, classifier__min_samples_split=2, classifier__n_estimators=50; total time=   0.1s\n",
       "[CV] END classifier__max_depth=5, classifier__min_samples_split=2, classifier__n_estimators=10; total time=   0.1s\n",
       "[CV] END classifier__max_depth=5, classifier__min_samples_split=2, classifier__n_estimators=10; total time=   0.1s\n",
+      "[CV] END classifier__max_depth=5, classifier__min_samples_split=2, classifier__n_estimators=10; total time=   0.1s\n",
+      "[CV] END classifier__max_depth=5, classifier__min_samples_split=2, classifier__n_estimators=10; total time=   0.1s\n",
+      "[CV] END classifier__max_depth=5, classifier__min_samples_split=2, classifier__n_estimators=10; total time=   0.1s\n",
+      "[CV] END classifier__max_depth=5, classifier__min_samples_split=2, classifier__n_estimators=50; total time=   0.1s\n",
+      "[CV] END classifier__max_depth=5, classifier__min_samples_split=2, classifier__n_estimators=50; total time=   0.2s\n",
+      "[CV] END classifier__max_depth=5, classifier__min_samples_split=2, classifier__n_estimators=50; total time=   0.1s\n",
+      "[CV] END classifier__max_depth=5, classifier__min_samples_split=2, classifier__n_estimators=50; total time=   0.1s\n",
       "[CV] END classifier__max_depth=5, classifier__min_samples_split=2, classifier__n_estimators=50; total time=   0.1s\n"
      ]
     }
@@ -3699,15 +3699,15 @@
     "from sklearn.model_selection import GridSearchCV\n",
     "\n",
     "import os\n",
-    "os.environ['MLFLOW_S3_ENDPOINT_URL'] = \"http://mlflow-minio:9000\"\n",
+    "os.environ['MLFLOW_S3_ENDPOINT_URL'] = \"http://minio:9000\"\n",
     "os.environ['AWS_ACCESS_KEY_ID'] = 'admin'\n",
     "os.environ['AWS_SECRET_ACCESS_KEY'] = 'supersecret'\n",
     "\n",
     "# connect to mlflow\n",
     "mlflow.set_tracking_uri(\"http://mlflow:5000\")\n",
-    "mlflow.set_experiment(\"mlflow_penguins_vf5\")\n",
+    "mlflow.set_experiment(\"mlflow_penguins_vf\")\n",
     "\n",
-    "mlflow.sklearn.autolog(log_model_signatures=True, log_input_examples=True, registered_model_name=\"modelo_penguins_v2\", max_tuning_runs=27)\n",
+    "mlflow.sklearn.autolog(log_model_signatures=True, log_input_examples=True, registered_model_name=\"modelo_penguins\", max_tuning_runs=27)\n",
     "\n",
     "with mlflow.start_run(run_name=\"autolog_pipe_model_reg\") as run:\n",
     "    grid_search.fit(X_train, y_train)"
